# data

./: .env  .env.backup  .env.example  .env.production  .env.sample  .env.secure  .gitignore  AI_AGENTS_COMPLETE.md  ALL_FIXES_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_ULTIMATE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY_NOTES.md  COMPLETE_DOCUMENTATION.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SECURE.md  DUPLICATE_FILES_ANALYSIS.md  Dockerfile  Dockerfile.production  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_RESTRUCTURE.md  FINAL_100_PERCENT.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_RESTRUCTURE_REPORT.txt  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FITUR_PENDUKUNG_V2_FINAL.md  GIT_PUSH_INSTRUCTIONS.md  HIGH_FIXES_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INVESTOR_PITCH.md  INVESTOR_PITCH_DECK.md  LAPORAN_AUDIT_KEAMANAN.md  LAPORAN_LENGKAP_PROJECT.md  (+123 more)
.github/workflows/: build_and_scan.yml  ci.yml  ci_enterprise.yml
agents/: __init__.py  base_agent.py  gpt5_agent.py
ai-python/: agent_coordinator.py
ai_agents/: __init__.py  agent_registry.py  base_agent.py  claude_agent.py  gpt5_agent.py  grok_agent.py  labyrinth_integration.py  load_balancer.py  mistral_agent.py  smart_dispatcher.py
ai_hub/: __init__.py  advanced_orchestrator.py  hub_core.py
alembic/: env.py
api/: agents_route.py  agents_route_v2.py  main.py  main_cached_enhanced.py  main_complete.py  main_complete_ui.py  main_fase1_complete.py  main_final.py  main_final_fixed.py  main_latest.py  main_optimized.py  main_phase2.py  main_production.py  main_production_ready.py  main_secure.py  main_simple.py  main_ubuntu_dashboard.py  main_v2.py  main_v2_final.py  main_websocket_enhanced.py  main_windows.py  metrics.py  models_v2.py  reverse_engineering_routes.py  secure_main.py  server_8090.py  server_with_ui.py  simple_server.py  validation_models.py
api/routes/: health.py
app/api/: enterprise_routes.py  routes.py
app/core/: audit.py  config.py  mfa.py  monitoring.py
app/models/: enterprise.py  requests.py  responses.py
app/services/: celery_app.py  tasks.py
asm/: asset_discovery.py  vulnerability_scanner.py
compliance/: soc2_checklist.md
config/: settings.py
core-rust/: Cargo.toml
core-rust/src/: lib.rs
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/public/: index.html
dashboard/src/: App.css  App.jsx  main.jsx
data/samples/: threat_sample.json
datacenter_security/: LIBRARY_DISTRIBUTION.md
datacenter_security/cpp_libs/: CMakeLists_datacenter.txt  datacenter_security.hpp
datacenter_security/framework/: datacenter_core.py  zero_trust_architecture.py
datacenter_security/go_libs/: go.mod  security_scanner.go
datacenter_security/python_libs/: ai_security_engine.py  requirements_datacenter.txt
datacenter_security/rust_libs/: Cargo.toml  security_core.rs
demo/: live_demo_system.py
deployment/: Dockerfile_api  Dockerfile_dashboard  Dockerfile_go  Dockerfile_rust  docker-compose.db.yml  docker-compose.yml  grafana-dashboard.json  nginx.conf
deployment/cicd/: github-actions.yml
deployment/k8s/: agent-registry.yaml  anchor-service.yaml  api-deployment.yaml  go-scanner.yaml  hpa-api.yaml  namespace.yaml  pdb-api.yaml  rust-labyrinth.yaml  vault-ha.yaml
deployment/terraform/: main.tf
docs/: ARCHITECTURE.md  COMPLIANCE_MATRIX.md  OP_RUNBOOK.md  POC_AGREEMENT_TEMPLATE.md  PRESENTER_SCRIPT.md  VAULT_HA_HSM.md  WEBSOCKET_CLIENT_GUIDE.md  dokumentasi_lengkap.md
docs/database/: schema.sql
enterprise/: siem_integrations.py
frontend/: index.html  package.json  vite.config.ts
gitops/apps/: app-of-apps.yaml
gitops/base/: kustomization.yaml
grafana/dashboards/: infinite_ai_overview.json
infrastructure/docker/: docker-compose.yml
integrations/: real_api_clients.py
litestar_app/: app.py
litestar_app/schemas/: auth.py
operations/: incident_response.md
phase2/ai_hub/: agent_coordinator.py
phase2/database/: schema.sql
prometheus/: alert_rules.yaml  alertmanager.yaml
reverse_engineering/: __init__.py  code_analyzer.py  core_engine.py  malware_analyzer.py
scaling/: README.md  archival_job.py  cpp-ingest-consumer.cpp  deploy-all.sh  go-ingest-consumer.go  grafana-dashboard.json  index_and_shard_setup.sh  kafka-compose.yml  mongo-sharded-k8s.yaml  prometheus-grafana.yml  prometheus.yml  python-ingest-consumer.py  requirements.txt  rust-ingest-consumer.rs  test_producer.py
scripts/: demo_script.py  demo_script_v2.py  generate_secrets.py  package_poc.py  quality_check.py  run_simulation.py  start_all.py
security/: auth_manager.py  backup_manager.py  config_validator.py  connection_pool.py  distributed_rate_limiter.py  enhanced_auth.py  enhanced_logger.py  input_validator.py  per_user_rate_limiter.py  redirect_validator.py  request_size_middleware.py  vault_integration.py
security_advanced/: hsm_integration.py
security_engine/: reverse_engineering_integration.py
security_engine/asm_core/: Makefile  asm_interface.py  build.sh  performance_monitor.asm  security_core.asm
security_engine/cpp_core/: CMakeLists.txt  build.sh
security_engine/cpp_core/include/: common.hpp  crypto_engine.hpp  packet_filter.hpp  security_core.hpp
security_engine/cpp_core/src/: advanced_security_engine.cpp  main.cpp
security_engine/detector_cpp/: advanced_detector.cpp
security_engine/labyrinth_rust/: Cargo.toml
security_engine/labyrinth_rust/src/: advanced_labyrinth.rs  main.rs  reverse_analyzer.rs  secure_labyrinth.rs
security_engine/scanner_go/: advanced_ai_scanner.go  advanced_scanner.go  go.mod  reverse_scanner.go  scanner.go  secure_scanner.go
security_engine/simulators/: multi_engine.py
server-go/: main.go
services/: anchor_service.py
services/ai-hub/: Dockerfile  requirements.txt
services/api-gateway/: Dockerfile  (+1 more)
sql/: 00_schema_setup.sql
templates/: enterprise_dashboard.html  index.html  professional.html
testing/: load_test_suite.py  penetration_test.py  security_test_suite.py
tests/: test_agents.py  test_api.py  test_purepy_stack.py
(+48 files in other folders)
