# 🦀 RUST LIBRARIES FOR DATA CENTER SECURITY (25 Libraries)

[package]
name = "datacenter-security"
version = "0.1.0"
edition = "2021"

[dependencies]
# === ASYNC RUNTIME & NETWORKING ===
tokio = { version = "1.35", features = ["full"] }          # Async runtime
async-std = "1.12"                                         # Alternative async runtime
hyper = { version = "1.0", features = ["full"] }          # HTTP implementation
reqwest = { version = "0.11", features = ["json"] }       # HTTP client
axum = "0.7"                                               # Web framework

# === SERIALIZATION & DATA ===
serde = { version = "1.0", features = ["derive"] }        # Serialization framework
serde_json = "1.0"                                        # JSON support
bincode = "1.3"                                           # Binary serialization
prost = "0.12"                                            # Protocol buffers
rmp-serde = "1.1"                                         # MessagePack

# === CRYPTOGRAPHY & SECURITY ===
ring = "0.17"                                             # Cryptographic operations
rustls = "0.22"                                           # TLS implementation
sha2 = "0.10"                                             # SHA-2 hash functions
aes-gcm = "0.10"                                          # AES-GCM encryption
argon2 = "0.5"                                            # Password hashing

# === DATABASE & STORAGE ===
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }  # SQL toolkit
redis = { version = "0.24", features = ["tokio-comp"] }   # Redis client
rocksdb = "0.21"                                          # Embedded database
sled = "0.34"                                             # Embedded database

# === CONCURRENCY & PARALLELISM ===
rayon = "1.8"                                             # Data parallelism
crossbeam = "0.8"                                         # Concurrent data structures
parking_lot = "0.12"                                      # Synchronization primitives

# === MONITORING & OBSERVABILITY ===
tracing = "0.1"                                           # Application-level tracing
tracing-subscriber = "0.3"                               # Tracing subscriber
metrics = "0.22"                                          # Metrics collection

# === UTILITIES ===
uuid = { version = "1.6", features = ["v4"] }            # UUID generation
chrono = { version = "0.4", features = ["serde"] }       # Date and time