[package]
name = "infinite_labyrinth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"